apps/talos_cluster/bookwyrm/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookwyrm
  labels:
    app: bookwyrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookwyrm
  strategy:
    type: "Recreate"
  template:
    metadata:
      labels:
        app: bookwyrm
    spec:
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
      volumes:
        - name: bookwyrm-script
          configMap:
            name: bookwyrm-script
        - name: bookwyrm-data
          persistentVolumeClaim:
            claimName: bookwyrm-pvc
        - name: nginx-config
          configMap:
            name: nginx
        - name: nginx-tmp
          emptyDir: {}
        - name: nginx-var-cache
          emptyDir: {}
        - name: nginx-var-run
          emptyDir: {}
      containers:
        - name: nginx
          image: nginxinc/nginx-unprivileged:1.27-alpine
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false # envsubst template processing writes to /etc/nginx/conf.d/
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: "200m"
              memory: "128Mi"
            requests:
              cpu: "50m"
              memory: "64Mi"
          volumeMounts:
            - name: bookwyrm-data
              mountPath: /app/static
              subPath: static
            - name: bookwyrm-data
              mountPath: /app/media
              subPath: media
            - name: bookwyrm-data
              mountPath: /app/exports
              subPath: exports
            - name: bookwyrm-data
              mountPath: /app/images
              subPath: images
            - name: nginx-config
              mountPath: /etc/nginx/templates/default.conf.template
              subPath: reverse_proxy.conf
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/templates/server_config.template
              subPath: server_config
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/locations
              subPath: locations
              readOnly: true
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/server_name
              subPath: server_name
              readOnly: true
            - name: nginx-tmp
              mountPath: /tmp
            - name: nginx-var-cache
              mountPath: /var/cache/nginx
            - name: nginx-var-run
              mountPath: /var/run
          livenessProbe:
            httpGet:
              port: 8080
              path: "/"
            initialDelaySeconds: 15
            periodSeconds: 30
          ports:
            - name: bookwyrm-nginx
              containerPort: 8080
              protocol: TCP
        - name: bookwyrm-web
          image: registry.midnightthoughts.space/mtrnord/bookwyrm:v0.8.2 # {"$imagepolicy": "flux-system:bookwyrm"}
          imagePullPolicy: Always
          command: ["gunicorn"]
          args:
            - "bookwyrm.wsgi:application"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: "500m"
              memory: "3Gi"
            requests:
              cpu: 200m
              memory: 500Mi
          volumeMounts:
            - name: bookwyrm-data
              mountPath: /app/static
              subPath: static
            - name: bookwyrm-data
              mountPath: /app/media
              subPath: media
            - name: bookwyrm-data
              mountPath: /app/exports
              subPath: exports
            - name: bookwyrm-data
              mountPath: /app/images
              subPath: images
          livenessProbe:
            httpGet:
              port: 8000
              path: "/"
            initialDelaySeconds: 15
            periodSeconds: 30
          ports:
            - name: bookwyrm-http
              containerPort: 8000
              protocol: TCP
        - name: bookwyrm-celery-worker
          image: registry.midnightthoughts.space/mtrnord/bookwyrm:v0.8.2 # {"$imagepolicy": "flux-system:bookwyrm"}
          imagePullPolicy: Always
          command: ["celery"]
          args:
            - "-A"
            - "celerywyrm"
            - "worker"
            - "-l"
            - "info"
            - "-Q"
            - "high_priority,medium_priority,low_priority,streams,images,suggested_users,email,connectors,lists,inbox,imports,import_triggered,broadcast,misc"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: "500m"
              memory: "2Gi"
            requests:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
            - name: bookwyrm-data
              mountPath: /app/static
              subPath: static
            - name: bookwyrm-data
              mountPath: /app/media
              subPath: media
            - name: bookwyrm-data
              mountPath: /app/exports
              subPath: exports
            - name: bookwyrm-data
              mountPath: /app/images
              subPath: images
        - name: bookwyrm-celery-beat
          image: registry.midnightthoughts.space/mtrnord/bookwyrm:v0.8.2 # {"$imagepolicy": "flux-system:bookwyrm"}
          imagePullPolicy: Always
          command: ["celery"]
          args:
            - "-A"
            - "celerywyrm"
            - "beat"
            - "-l"
            - "INFO"
            - "--scheduler"
            - "django_celery_beat.schedulers:DatabaseScheduler"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: "200m"
              memory: "500Mi"
            requests:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
            - name: bookwyrm-data
              mountPath: /app/static
              subPath: static
            - name: bookwyrm-data
              mountPath: /app/media
              subPath: media
            - name: bookwyrm-data
              mountPath: /app/exports
              subPath: exports
            - name: bookwyrm-data
              mountPath: /app/images
              subPath: images
        - name: bookwyrm-flower
          image: registry.midnightthoughts.space/mtrnord/bookwyrm:v0.8.2 # {"$imagepolicy": "flux-system:bookwyrm"}
          imagePullPolicy: Always
          command: ["celery"]
          args:
            - "-A"
            - "celerywyrm"
            - "flower"
            - "--url_prefix=flower"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            limits:
              cpu: "200m"
              memory: "500Mi"
            requests:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
            - name: bookwyrm-data
              mountPath: /app/static
              subPath: static
            - name: bookwyrm-data
              mountPath: /app/media
              subPath: media
            - name: bookwyrm-data
              mountPath: /app/exports
              subPath: exports
            - name: bookwyrm-data
              mountPath: /app/images
              subPath: images
          ports:
            - name: flower-http
              containerPort: 5555
              protocol: TCP
---
# Service for BookWyrm
apiVersion: v1
kind: Service
metadata:
  name: bookwyrm
  labels:
    app: bookwyrm
spec:
  selector:
    app: bookwyrm
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
# HTTPRoute for BookWyrm
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bookwyrm
  namespace: bookwyrm
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
  hostnames:
    - books.mtrnord.blog
  rules:
    - name: bookwyrm-traffic
      matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: bookwyrm
          port: 8080
      timeouts:
        request: 240s
        backendRequest: 0s
